--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Photo App</title>
+    <title>React App</title>
   </head>
   <body>
+    <script src="../src/Photo.jsx"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
